--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
   },
   "dependencies": {
     "babel-preset-env": "^1.6.1",
+    "classnames": "^2.2.5",
     "clean-webpack-plugin": "^0.1.18",
     "file-loader": "^1.1.9",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^2.1.0",
+    "prop-types": "^15.6.1",
+    "ramda": "^0.25.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2"
