--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "start": "webpack-dev-server",
     "build": "NODE_ENV=production webpack -p",
+    "eslint": "eslint ./src",
+    "eslint-fix": "eslint --fix ./src",
     "push": "npm run build && git add -A && git commit -m 'build' && git push"
   },
   "repository": {
