--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "prop-types": "^15.6.1",
     "ramda": "^0.25.0",
     "react": "^16.2.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2"
   }
